mongo/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
# metadata section
metadata:
  name: mongo-deployment
  labels:
    app: mongodb
# specification section
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
