mongo/mongoexpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
# metadata section
metadata:
  name: mongo-express
  labels:
    app: mongoexpress
# specification section
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
        - name: mongoexpress
          image: mongo-express:latest
          ports:
            - containerPort: 8081
