mongo/mongodb-service.yaml
apiVersion: v1
kind: Service 
# metadata section
metadata:
  name: mongodb-service
  labels:
    app: mongodb
# specification section
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
