mongo/mongoexpress-service.yaml
apiVersion: v1
kind: Service 
# metadata section
metadata:
  name: mongoexpress-service
  labels:
    app: mongoexpress
# specification section
spec:
  selector:
    app: mongoexpress
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30001
